# jsoo-react-realworld-example-app

./: .gitignore  Makefile  README.md  bsconfig.json  bundle_size.txt  dune-project  index.html  index.js  jsoo-react-realworld-example.opam  jsoo-react-realworld-example.opam.template  package.json  webpack.config.js
bundle-study/: 00_no_components_jsoo_report.html  00_no_components_rescript_report.html  01_home_jsoo_report.html  01_home_rescript_report.html  02_settings_jsoo_report.html  02_settings_rescript_report.html  03_login_jsoo_report.html  03_login_rescript_report.html  04_register_jsoo_report.html  04_register_rescript_report.html  05_createArticle_jsoo_report.html  05_createArticle_rescript_report.html  06_editArticle_jsoo_report.html  06_editArticle_rescript_report.html  07_article_jsoo_report.html  07_article_rescript_report.html  08_profile_jsoo_report.html  08_profile_rescript_report.html  09_favorited_jsoo_report.html  09_favorited_rescript_report.html  index.html
src/: api.ml  app.ml  app_error.ml  article.ml  article_author_avatar.ml  article_author_name.ml  article_comments.ml  article_date.ml  article_delete_button.ml  article_edit_button.ml  article_favorite_button.ml  article_follow_button.ml  article_post_comment.ml  article_tag_list.ml  async_data.ml  async_result.ml  dune  editor.ml  endpoints.ml  error_details.ml  fetch.ml  fetch.mli  footer.ml  header.ml  home.ml  home_article_preview.ml  home_popular_tags.ml  hook.ml  index.html  link.ml  link.mli  login.ml  main.ml  markdown.mli  pagination.ml  profile.ml  register.ml  route.ml  security.ml  settings.ml  (+5 more)
src/page/: Footer.res
src/shared/: API.res  Shape.res
